--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/icons8-newspaper-32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://www.dafontfree.net/embed/b2xkLWVuZ2xpc2gtdGV4dC1tdC1yZWd1bGFyJmRhdGEvMjYvby8xMzY5NDQvT0xELnR0Zg" rel="stylesheet" type="text/css"/>
-  <title>Vite + React</title>
+  <link href="https://www.dafontfree.net/embed/b2xkLWVuZ2xpc2gtdGV4dC1tdC1yZWd1bGFyJmRhdGEvMjYvby8xMzY5NDQvT0xELnR0Zg"
+    rel="stylesheet" type="text/css" />
+  <title>Dragon News</title>
 </head>
 
 <body>
